# etf-arb-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  USAGE.md  VERIFICATION.md  package-lock.json  package.json  playwright.config.ts  pytest.ini  requirements.txt  run_server.sh  start.py  test_frontend.py
.claude/: generate-daily-report.py  settings.json
config/: __init__.py  alert.py  backtest.yaml  logger.py  mystock.py  settings.yaml  stocks.yaml  strategies.yaml  strategy.py
docs/: STRATEGY.md  STRATEGY_GUIDE.md  error_handling_standards.md  frontend-cleanup-complete.md  frontend-refactor-proposal.md  frontend-restructure-complete.md  frontend-test-report.md  naming_conventions.md  plugin-system.md  server-test-summary.md  strategy-extensibility-design.md  strategy-extensibility-summary.md  test-suite-summary.md  (+1 more)
servers/mcp/: DESIGN_SUMMARY.md  IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  test_server.py
servers/mcp/etf_arbitrage/: __init__.py  config.py  server.py
servers/mcp/etf_arbitrage/models/: __init__.py  enums.py  requests.py  responses.py
servers/mcp/etf_arbitrage/tools/: __init__.py  arbitrage.py  backtest.py  base.py  market.py  monitor.py  my_stocks.py  signal.py  watchlist.py
servers/mcp/etf_arbitrage/utils/: __init__.py  errors.py  formatters.py
servers/mcp/evaluations/: README.md  TEST_RESULTS.md  etf_arbitrage_eval.xml  run_eval.py
servers/mcp/tests/: __init__.py  test_integration.py  test_server.py  test_server_basic.py  test_tool_integration.py  test_tools.py
servers/mcp/tests/data/: app.db
tests/: README.md  (+3 more)
(+285 files in other folders)
